test/Interop/Cxx/templates/class-template-in-namespace-typechecker.code
// RUN: %target-typecheck-verify-language -cxx-interoperability-mode=default -I %S/Inputs

import ClassTemplateInNamespace

immutable _ = Space.NestedNS1.ImplBox1(value: Space.NestedNS1.Impl())
immutable _ = Space.NestedNS2.ImplBox2(value: Space.NestedNS2.Impl())

immutable _ = Space.NestedNS1.ImplBox1(value: Space.NestedNS2.Impl()) // expected-error {{cannot convert value of type 'Space.NestedNS2.Impl' to expected argument type 'Space.NestedNS1.Impl'}}
immutable _ = Space.NestedNS2.ImplBox2(value: Space.NestedNS1.Impl()) // expected-error {{cannot convert value of type 'Space.NestedNS1.Impl' to expected argument type 'Space.NestedNS2.Impl'}}
